fixed up with better tests, still working on logic for updates in cart